--- a/Semestre 2/Seminario de Proyectos/U1_1B_Aaron_Ramirez.ipynb
+++ b/Semestre 2/Seminario de Proyectos/U1_1B_Aaron_Ramirez.ipynb
@@ -13,7 +13,7 @@
     "        <p><strong>Nombre:</strong> David Aaron Ramirez Olmeda<br>\n",
     "        <strong>Programa:</strong> Maestría en Ciencia de Datos e Información</p>\n",
     "    </div>\n",
-    "    <img src=\"https://scontent.fcul2-1.fna.fbcdn.net/v/t39.30808-6/357432505_662449529254685_507850031498699830_n.jpg?_nc_cat=108&cb=99be929b-3346023f&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeH2hCNpPQBYl-6o57Q-RzCk1muPQAYvpg7Wa49ABi-mDvRwO9gpOMqNX25pbHbVW177Wxu5wa45Oo67bjYAhSZG&_nc_ohc=GILHri9sW0sAX_PkSZ4&_nc_ht=scontent.fcul2-1.fna&oh=00_AfDxpJ1m-40MHrY_P3-wQjj4ZdjmggaPZLwP8Dd2ckUikA&oe=64D8574A\" alt=\"Imagen de Portada\" width=\"170\" height=\"170\">\n",
+    "    <img src=\"https://scontent.fcul2-1.fna.fbcdn.net/v/t39.30808-6/357432505_662449529254685_507850031498699830_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-3D382E8vG4AX_1wn03&_nc_ht=scontent.fcul2-1.fna&oh=00_AfCIvhU6paJN_kuhRg8E4QAErpJD_TnjF8jST4q1apitiw&oe=64E8294A\" alt=\"Imagen de Portada\" width=\"170\" height=\"170\">\n",
     "</div>"
    ]
   },
