--- a/Semestre 2/Aprendizaje Computacional/03_metodos_parametricos.ipynb
+++ b/Semestre 2/Aprendizaje Computacional/03_metodos_parametricos.ipynb
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "debf1f8a-19ca-4739-b29e-87005ba03df2",
+   "execution_count": 4,
+   "id": "60ecf40f-fed9-4c6c-9e63-8a0a5a62e24c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,35 @@
     "import seaborn as sns\n",
     "sns.set_theme()\n",
     "import os\n",
-    "\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "94c2fcf4-20ce-4bac-abfd-c60ff2e820ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aaron/opt/anaconda3/lib/python3.9/site-packages/EvoMSA/model.py:634: RuntimeWarning: invalid value encountered in subtract\n",
+      "  return posterior - evidence\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<seaborn.axisgrid.FacetGrid at 0x7f9e43052190>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "T = np.loadtxt('delitos/delitos_train_data.csv', delimiter=',')\n",
     "y_t = np.loadtxt('delitos/delitos_train_label.csv', delimiter=',')\n",
     "G = np.loadtxt('delitos/delitos_test_data.csv', delimiter=',')\n",
@@ -69,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f109f70b-8486-4116-baa4-8bc56f7c99ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.29826272043877583"
+       "0.28670938128208057"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,8 +119,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "124a97c9-d423-4108-990c-28c75f72e2ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = metrics.accuracy_score(y_g, hy_naive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0e4720f5-e1c3-4c38-b2bb-07e86a898bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall = metrics.recall_score(y_g, hy_naive, average=None)\n",
+    "precision = metrics.precision_score(y_g, hy_naive, average=None)\n",
+    "f1 = metrics.f1_score(y_g, hy_naive, average=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "84243893-44e6-45a2-91e4-5bd97fb19c65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84046693, 0.60194175])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "25eb700a-e129-4899-9ada-58c90c1ac0c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.93913043, 0.47692308])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "147c0466-08d9-4476-98ed-ab9f5b6ba20f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.76056338, 0.81578947])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "15cb1aef-e145-451f-bff7-14d2cc3a0053",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7722222222222223"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "db55dabc-5655-4421-84d3-533ba758e1a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se encontraron valores NaN o infinitos en las predicciones limpias.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Encuentra las filas con valores NaN en G\n",
+    "nan_rows = np.isnan(G).any(axis=1)\n",
+    "\n",
+    "# Filtra G y y_g para eliminar las filas con NaN\n",
+    "G_clean = G[~nan_rows]\n",
+    "y_g_clean = y_g[~nan_rows]\n",
+    "\n",
+    "# Filtra las predicciones para que coincidan con los datos limpios\n",
+    "prob_clean = prob[~nan_rows]\n",
+    "\n",
+    "# Verifica si hay valores NaN o infinitos en las predicciones limpias\n",
+    "if np.isnan(prob_clean).any() or np.isinf(prob_clean).any():\n",
+    "    # Si se encuentran valores problemáticos, realiza un manejo adecuado, como imputación o eliminación.\n",
+    "    # También puedes investigar por qué se están generando valores problemáticos en tus predicciones.\n",
+    "    print(\"Se encontraron valores NaN o infinitos en las predicciones limpias.\")\n",
+    "else:\n",
+    "    # Si no hay valores problemáticos, procede con el cálculo de la entropía cruzada.\n",
+    "    entropia = metrics.log_loss(y_g_clean, prob_clean)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d1f65da-ca62-4e1c-bb87-a3a6973965c3",
    "metadata": {},
    "outputs": [],
    "source": []
